jgit (3.0.0-1) UNRELEASED; urgency=low

  * New Upstream release.
  * Use maven.ignoreRules to remove unnecessary maven plugins.
  * Add libjavaewah-java to Build-Depends.
  * Don't install org.eclipse.jgit.junit.jar, it's used only by tests.
  * Use xz for upstream tarball compression.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 11 Jun 2013 19:22:57 +0200

jgit (2.3.1-2) unstable; urgency=low

  * Team upload.
  * Upload to unstable for jessie release cycle.

 -- tony mancill <tmancill@debian.org>  Sun, 05 May 2013 18:50:33 -0700

jgit (2.3.1-1) experimental; urgency=low

  * New Upstream release.
  * Refreshed debian-custom-build.patch.
  * Remove mention of iplog jar from packaging files (removed upstream).

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 22 Feb 2013 16:47:29 +0100

jgit (2.2.0-1) experimental; urgency=low

  * New Upstream release.
  * Remove /usr/share/java prefix from Class-Path entries.
  * Add dependency on libcommon-compress-java.
  * Move JGit Ant tasks into separate binary package. Avoids in most
    use cases unnecessary dependency on Ant.
  * Bump Standards-Version to 3.9.4.
  * Updated d/watch.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 20 Dec 2012 20:12:19 +0100

jgit (2.1.0-1) unstable; urgency=low

  * New Upstream release.
  * Refreshed debian-custom-build.patch.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Thu, 27 Sep 2012 16:54:42 +0200

jgit (2.0.0-2) unstable; urgency=low

  * Add breaks on eclipse-egit (<< 2.0) to ensure egit is
    upgraded together with libjgit-java.
  * Work around issue with the maven clean rule.

 -- Niels Thykier <niels@thykier.net>  Wed, 27 Jun 2012 12:28:15 +0200

jgit (2.0.0-1) unstable; urgency=low

  * New Upstream release.
  * Refreshed d/patches/debian-custom-build.patch.
  * Drop d/patches/tests-init-ant-project.patch. Applied upstream.
  * Removed eclipse-jgit dummy transitional package.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sun, 24 Jun 2012 12:36:22 +0200

jgit (1.3.0-2) unstable; urgency=low
