@@ -10,8 +10,8 @@ Subject: debian-custom-build
 - don't build jgit console all-in-one executable
 ---
  org.eclipse.jgit.pgm/jgit.sh |    2 +-
- pom.xml                      |    7 ++++---
- 2 files changed, 5 insertions(+), 4 deletions(-)
+ pom.xml                      |    9 +++++----
+ 2 files changed, 6 insertions(+), 5 deletions(-)
 
 diff --git a/org.eclipse.jgit.pgm/jgit.sh b/org.eclipse.jgit.pgm/jgit.sh
 index 6b9ce40..3700d4f 100644
@@ -27,7 +27,7 @@ index 6b9ce40..3700d4f 100644
  
  java=java
 diff --git a/pom.xml b/pom.xml
-index 4c27438..aff8b24 100644
+index 4c27438..19573a6 100644
 --- a/pom.xml
 +++ b/pom.xml
 @@ -371,6 +371,7 @@
@@ -38,6 +38,15 @@ index 4c27438..aff8b24 100644
          </configuration>
          <executions>
            <execution>
+@@ -476,7 +477,7 @@
+       <modules>
+         <module>org.eclipse.jgit.console</module>
+         <module>org.eclipse.jgit.java7</module>
+-        <module>org.eclipse.jgit.java7.test</module>
++        <!--module>org.eclipse.jgit.java7.test</module-->
+       </modules>
+     </profile>
+     <profile>
 @@ -503,11 +504,11 @@
      <module>org.eclipse.jgit.http.server</module>
      <module>org.eclipse.jgit.pgm</module>
