@@ -14,6 +14,7 @@ install/libjgit-java::
 	mh_installpoms -plibjgit-java
 	mh_installjar -plibjgit-java -l org.eclipse.jgit/pom.xml org.eclipse.jgit/target/org.eclipse.jgit-*-r.jar
 	mh_installjar -plibjgit-java -l org.eclipse.jgit.http.server/pom.xml org.eclipse.jgit.http.server/target/org.eclipse.jgit.http.server-*-r.jar
+	mh_installjar -plibjgit-java -l org.eclipse.jgit.java7/pom.xml org.eclipse.jgit.java7/target/org.eclipse.jgit.java7-*-r.jar
 	mh_unpatchpoms -plibjgit-java
 
 install/libjgit-ant-java::
