@@ -5,6 +5,7 @@ jgit (3.0.0-1) UNRELEASED; urgency=low
   * Add libjavaewah-java to Build-Depends.
   * Don't install org.eclipse.jgit.junit.jar, it's used only by tests.
   * Use xz for upstream tarball compression.
+  * Enable build of org.eclipse.jgit.java7.jar.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 11 Jun 2013 19:22:57 +0200
 
